welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:13: error: Unmatched closing brace '}' ignored here
 }
 ^